LAU-419: Update to add fortify configuration.